[gd_scene load_steps=56 format=3 uid="uid://cnpcm2juvcutu"]

[ext_resource type="Shader" uid="uid://b3xb8j1icuyp" path="res://shaders/PaletteSwap.gdshader" id="1_hk0hv"]
[ext_resource type="Script" uid="uid://cdp8cckqtq8nw" path="res://scenes/objects/players/copy_robot.gd" id="2_we56i"]
[ext_resource type="Texture2D" uid="uid://c18jx5q3e1uac" path="res://sprites/players/copy_robot/palettes/Copy Buster.png" id="3_ipvlp"]
[ext_resource type="Texture2D" uid="uid://bot48w7086agv" path="res://sprites/players/HurtStar.png" id="4_a3x8f"]
[ext_resource type="Texture2D" uid="uid://cc0x2byiwmvp1" path="res://sprites/players/copy_robot/copy_robot.png" id="5_a7tix"]
[ext_resource type="Texture2D" uid="uid://8mdvvlmmrxfn" path="res://sprites/players/HurtSweat.png" id="5_am6d3"]
[ext_resource type="Script" uid="uid://cssuixyxxvnir" path="res://addons/resonate/sound_manager/sound_bank.gd" id="8_grc4d"]
[ext_resource type="Script" uid="uid://cqvdhcbrf3nwt" path="res://addons/resonate/sound_manager/sound_event_resource.gd" id="9_l41df"]
[ext_resource type="AudioStream" uid="uid://b5ogbbgcst441" path="res://sounds/start_copy.wav" id="9_xhkjd"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_qymoq"]
shader = ExtResource("1_hk0hv")
shader_parameter/skip_first_row = true
shader_parameter/use_palette_alpha = false
shader_parameter/fps = 6.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rq8vj"]
size = Vector2(12, 26)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_l5wgv"]
size = Vector2(14, 8)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_7773x"]
shader = ExtResource("1_hk0hv")
shader_parameter/palette = ExtResource("3_ipvlp")
shader_parameter/skip_first_row = true
shader_parameter/use_palette_alpha = false
shader_parameter/fps = 6.0

[sub_resource type="Animation" id="Animation_p42vu"]
resource_name = "Dead"
length = 0.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [30]
}

[sub_resource type="Animation" id="Animation_7rapa"]
resource_name = "DoubleFinShredder"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.233333, 0.3, 0.366666, 0.433333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [42, 43, 44, 54, 55, 56, 57]
}

[sub_resource type="Animation" id="Animation_q4ygw"]
length = 0.166667
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0833333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [38, 39]
}

[sub_resource type="Animation" id="Animation_lgup5"]
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.133333, 0.2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [54, 55, 56, 57]
}

[sub_resource type="Animation" id="Animation_i4l8q"]
length = 0.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [29]
}

[sub_resource type="Animation" id="Animation_edosb"]
resource_name = "IDLE"
length = 1.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0833333, 0.166667, 0.25, 0.333333, 0.416667, 0.5, 0.583333, 0.666667, 0.75, 0.833333, 0.916667, 1, 1.08333, 1.16667, 1.25, 1.33333, 1.41667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_30cjn"]
length = 0.533333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.133333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [48, 49, 50]
}

[sub_resource type="Animation" id="Animation_evk1v"]
length = 0.166667
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0833333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [12, 13]
}

[sub_resource type="Animation" id="Animation_sub63"]
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [42, 43, 44]
}

[sub_resource type="Animation" id="Animation_tb4da"]
length = 0.166667
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0833333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [35, 36]
}

[sub_resource type="Animation" id="Animation_c5o8q"]
length = 0.116686
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [37]
}

[sub_resource type="Animation" id="Animation_c04vi"]
length = 0.533333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.133333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [51, 52, 53]
}

[sub_resource type="Animation" id="Animation_j1aih"]
length = 0.166667
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0833333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [40, 41]
}

[sub_resource type="Animation" id="Animation_rss1p"]
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [45, 46, 47]
}

[sub_resource type="Animation" id="Animation_fspq0"]
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3, 0.4, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [58, 59, 60, 61, 60, 59]
}

[sub_resource type="Animation" id="Animation_padrw"]
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [63]
}

[sub_resource type="Animation" id="Animation_674xt"]
resource_name = "Ladder-Throw"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [64, 65, 66]
}

[sub_resource type="Animation" id="Animation_73g7h"]
length = 0.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [62]
}

[sub_resource type="Animation" id="Animation_p32gw"]
resource_name = "RESET"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MainHitbox:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 3)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("MainHitbox:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_33c1p"]
resource_name = "STEP"
length = 0.111111
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0555556),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [4, 5]
}

[sub_resource type="Animation" id="Animation_t3b0n"]
resource_name = "Saku-High"
length = 0.166667
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0833333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [69, 70]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MainHitbox:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -9)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MainHitbox:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_hs1xi"]
resource_name = "Saku-Low"
length = 0.166667
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0833333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [67, 68]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MainHitbox:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -6)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MainHitbox:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_h6n08"]
length = 0.133333
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666667),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [33, 34]
}

[sub_resource type="Animation" id="Animation_p6ymo"]
resource_name = "TELEPORT"
length = 0.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [28]
}

[sub_resource type="Animation" id="Animation_dbqgi"]
resource_name = "TELEPORT_LANDING"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [27, 26, 25, 24, 23, 22, 21, 20]
}

[sub_resource type="Animation" id="Animation_uaigh"]
resource_name = "WALK"
length = 0.700117
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.116686, 0.233372, 0.350058, 0.466744, 0.583431),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [6, 7, 8, 9, 10, 11]
}

[sub_resource type="Animation" id="Animation_jomt1"]
length = 0.700117
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.116686, 0.233372, 0.350058, 0.466744, 0.583431),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [14, 15, 16, 17, 18, 19]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_mvjlo"]
_data = {
&"Dead": SubResource("Animation_p42vu"),
&"DoubleFinShredder": SubResource("Animation_7rapa"),
&"Fall": SubResource("Animation_q4ygw"),
&"FinShredder": SubResource("Animation_lgup5"),
&"Hurt": SubResource("Animation_i4l8q"),
&"IDLE": SubResource("Animation_edosb"),
&"Idle-Shield": SubResource("Animation_30cjn"),
&"Idle-Shoot": SubResource("Animation_evk1v"),
&"Idle-Throw": SubResource("Animation_sub63"),
&"Jump": SubResource("Animation_tb4da"),
&"Jump Transition": SubResource("Animation_c5o8q"),
&"Jump-Shield": SubResource("Animation_c04vi"),
&"Jump-Shoot": SubResource("Animation_j1aih"),
&"Jump-Throw": SubResource("Animation_rss1p"),
&"Ladder": SubResource("Animation_fspq0"),
&"Ladder-Shoot": SubResource("Animation_padrw"),
&"Ladder-Throw": SubResource("Animation_674xt"),
&"Ladder-Up": SubResource("Animation_73g7h"),
&"RESET": SubResource("Animation_p32gw"),
&"STEP": SubResource("Animation_33c1p"),
&"Saku-High": SubResource("Animation_t3b0n"),
&"Saku-Low": SubResource("Animation_hs1xi"),
&"Slide": SubResource("Animation_h6n08"),
&"TELEPORT": SubResource("Animation_p6ymo"),
&"TELEPORT_LANDING": SubResource("Animation_dbqgi"),
&"WALK": SubResource("Animation_uaigh"),
&"Walk-Shoot": SubResource("Animation_jomt1")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_biy2v"]
atlas = ExtResource("4_a3x8f")
region = Rect2(0, 0, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_7po6x"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": null
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_biy2v")
}],
"loop": true,
"name": &"new_animation",
"speed": 15.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_fomdo"]
atlas = ExtResource("5_am6d3")
region = Rect2(0, 0, 26, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_1n3ss"]
atlas = ExtResource("5_am6d3")
region = Rect2(0, 8, 26, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_52yde"]
atlas = ExtResource("5_am6d3")
region = Rect2(0, 16, 26, 8)

[sub_resource type="SpriteFrames" id="SpriteFrames_ya8ic"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fomdo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1n3ss")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_52yde")
}, {
"duration": 1.0,
"texture": null
}],
"loop": false,
"name": &"active",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gv3ns"]
size = Vector2(14, 26)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_k00s1"]
size = Vector2(16, 14)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ri683"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1foj6"]

[sub_resource type="Resource" id="Resource_bcce0"]
script = ExtResource("9_l41df")
name = "start"
bus = ""
volume = 0.0
pitch = 1.0
streams = Array[AudioStream]([ExtResource("9_xhkjd")])

[sub_resource type="GDScript" id="GDScript_a428o"]
script/source = "extends Area2D

var thing
var W_Type = 18 # Sakugarne physical hit
@onready var player = get_parent()

func _on_body_entered(body: Node2D) -> void:
	thing = body

func _on_timer_timeout() -> void:
	if GameState.infinite_ammo == false:
		GameState.weapon_energy[GameState.WEAPONS.QUINT] -= 1
	$Timer.start()

func destroy() -> void:
	return

func kill() -> void:
	return
	
func reflect() -> void:
	return
"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_m4t6e"]
size = Vector2(16, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ey3o7"]
size = Vector2(1, 0)

[node name="Copy Robot" type="CharacterBody2D" groups=["player", "splash"]]
material = SubResource("ShaderMaterial_qymoq")
collision_layer = 2
collision_mask = 17
floor_snap_length = 5.0
script = ExtResource("2_we56i")

[node name="hurtboxArea" type="Area2D" parent="." groups=["player"]]
collision_layer = 4
collision_mask = 2

[node name="mainHurtbox" type="CollisionShape2D" parent="hurtboxArea"]
position = Vector2(0, 3)
shape = SubResource("RectangleShape2D_rq8vj")
debug_color = Color(1, 0.85, 0, 0.419608)

[node name="slideHurtbox" type="CollisionShape2D" parent="hurtboxArea"]
position = Vector2(0, 12)
shape = SubResource("RectangleShape2D_l5wgv")

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_7773x")
texture = ExtResource("5_a7tix")
hframes = 73
frame = 40

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_mvjlo")
}
autoplay = "TELEPORT"

[node name="FX" type="Node2D" parent="."]
position = Vector2(0, 2)
rotation = -3.14159
scale = Vector2(1, -1)

[node name="Starburst" type="AnimatedSprite2D" parent="FX"]
visible = false
sprite_frames = SubResource("SpriteFrames_7po6x")
animation = &"new_animation"
autoplay = "new_animation"

[node name="Sweat" type="AnimatedSprite2D" parent="FX"]
position = Vector2(1.48619e-06, -17)
sprite_frames = SubResource("SpriteFrames_ya8ic")

[node name="MainHitbox" type="CollisionShape2D" parent="."]
position = Vector2(0, 3)
shape = SubResource("RectangleShape2D_gv3ns")

[node name="SlideHitbox" type="CollisionShape2D" parent="."]
position = Vector2(0, 9)
shape = SubResource("RectangleShape2D_k00s1")
disabled = true

[node name="StateTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="InvulTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="PainTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="SlideTimer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[node name="FireDelay" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[node name="CeilingCheck" type="RayCast2D" parent="."]
visible = false
position = Vector2(0, 12)
target_position = Vector2(0, -12)

[node name="LadderCheck" type="ShapeCast2D" parent="."]
visible = false
position = Vector2(0, 7)
shape = SubResource("RectangleShape2D_ri683")
target_position = Vector2(0, 0)
max_results = 1
collide_with_areas = true
collide_with_bodies = false

[node name="TopLadderCheck" type="ShapeCast2D" parent="."]
visible = false
position = Vector2(0, -13)
shape = SubResource("RectangleShape2D_1foj6")
target_position = Vector2(0, 0)

[node name="SoundBank" type="Node" parent="."]
script = ExtResource("8_grc4d")
label = "copy_robot"
events = Array[ExtResource("9_l41df")]([SubResource("Resource_bcce0")])

[node name="SakugarneArea" type="Area2D" parent="." groups=["player"]]
collision_layer = 8
collision_mask = 53
script = SubResource("GDScript_a428o")

[node name="CollisionShape2D" type="CollisionShape2D" parent="SakugarneArea"]
position = Vector2(0, 16)
shape = SubResource("RectangleShape2D_m4t6e")

[node name="Timer" type="Timer" parent="SakugarneArea"]
one_shot = true

[node name="states" type="RichTextLabel" parent="."]
offset_left = -36.0
offset_top = -20.0
offset_right = 43.0
offset_bottom = 20.0
bbcode_enabled = true
text = "state
goes here"

[node name="ShootTimer" type="Timer" parent="."]
process_callback = 0
wait_time = 0.35
one_shot = true

[node name="waterCheck" type="Area2D" parent="."]
position = Vector2(0, 1)
collision_layer = 4
collision_mask = 2

[node name="boop" type="CollisionShape2D" parent="waterCheck"]
shape = SubResource("RectangleShape2D_ey3o7")
debug_color = Color(0.969991, 0, 0.457701, 0.42)

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="body_entered" from="SakugarneArea" to="SakugarneArea" method="_on_body_entered"]
[connection signal="timeout" from="SakugarneArea/Timer" to="SakugarneArea" method="_on_timer_timeout"]
